# k2hr3_cli

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac  k2hr3-cli.install
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_helper.sh  ci.yml  ostypevars.sh
buildutils/: APKBUILD.templ.in  Makefile.am  alpine_build.sh  control.in  copyright.in  debian_build.sh  k2hr3-cli.install  k2hr3-cli.spec.in  make_description.sh  make_release_version_file.sh  make_rpm_changelog.sh  make_variables.sh  rpm_build.sh  rules.in
docs/: Makefile.am  k2hr3.1
src/: Makefile.am  k2hr3
src/libexec/: Makefile.am
src/libexec/acr/: command.sh  help.sh  summary.sh
src/libexec/common/: CREDIT  Makefile.am  configuration.sh  depends.sh  help.sh  interactive.sh  jsonparser.sh  k2hr3.config  message.sh  modelist.sh  option.sh  request.sh  requestutil.sh  strings.sh
src/libexec/config/: command.sh  help.sh  summary.sh
src/libexec/example_plugin_command/: CREDIT  Makefile.am  command.sh  help.sh  summary.sh  variables.sh
src/libexec/extdata/: command.sh  help.sh  summary.sh
src/libexec/list/: Makefile.am  command.sh  help.sh  summary.sh
src/libexec/policy/: command.sh  help.sh  summary.sh
src/libexec/resource/: command.sh  help.sh  summary.sh
src/libexec/role/: command.sh  help.sh  summary.sh
src/libexec/service/: Makefile.am  command.sh  help.sh  summary.sh
src/libexec/tenant/: Makefile.am  command.sh  help.sh  summary.sh
src/libexec/token/: Makefile.am  command.sh  help.sh  library.sh  summary.sh
src/libexec/userdata/: command.sh  help.sh  summary.sh
src/libexec/version/: command.sh  help.sh  summary.sh
test/: Makefile.am  test.sh  test_acr.sh  test_extdata.sh  test_jsonparser.sh  test_list.sh  test_policy.sh  test_resource.sh  test_role.sh  test_service.sh  test_tenant.sh  test_token.sh  test_userdata.sh  test_version.sh  util_request.sh  util_test.sh
test/snapshots/: Makefile.am  test_acr.snapshot  test_extdata.snapshot  test_jsonparser.snapshot  test_list.snapshot  test_policy.snapshot  test_resource.snapshot  test_role.snapshot  test_service.snapshot  test_tenant.snapshot  test_token.snapshot  test_userdata.snapshot  test_version.snapshot
