#
# K2HR3 Utilities - Command Line Interface
#
# Copyright 2021 Yahoo! Japan Corporation.
#
# K2HR3 is K2hdkc based Resource and Roles and policy Rules, gathers
# common management information for the cloud.
# K2HR3 can dynamically manage information as "who", "what", "operate".
# These are stored as roles, resources, policies in K2hdkc, and the
# client system can dynamically read and modify these information.
#
# For the full copyright and license information, please view
# the license file that was distributed with this source code.
#
# AUTHOR:   Takeshi Nakatani
# CREATE:   Mon Feb 15 2021
# REVISION:
#

SUBDIRS = snapshots

TESTS =	test.sh

EXTRA_DIST =	test.sh \
				util_test.sh \
				util_request.sh \
				test_acr.sh \
				test_extdata.sh \
				test_jsonparser.sh \
				test_list.sh \
				test_policy.sh \
				test_resource.sh \
				test_role.sh \
				test_service.sh \
				test_token.sh \
				test_userdata.sh \
				test_version.sh

CLEANFILES = *.log

#
# Local variables:
# tab-width: 4
# c-basic-offset: 4
# End:
# vim600: noexpandtab sw=4 ts=4 fdm=marker
# vim<600: noexpandtab sw=4 ts=4
#
